common/tf/modules/k8s-dashboard/resources/ns.yaml
#gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "kubernetes-dashboard"
